# feren-qstyle

./: AUTHORS  CMakeLists.txt  README.md
demo/: widgetfactory.ui
style/: CMakeLists.txt  config-feren.h.cmake  config-inspire.h.cmake  feren.h  feren.themerc  ferenaddeventfilter.h  ferenblurhelper.cpp  ferendebug.h  ferenhelper.cpp  ferenhelper.h  ferenmnemonics.cpp  ferenmnemonics.h  ferensplitterproxy.cpp  ferensplitterproxy.h  ferenstyle.cpp  ferenstyle.h  ferenstyleplugin.cpp  ferenstyleplugin.h  ferenwindowmanager.cpp  ferenwindowmanager.h  inspire.h  inspire.json  inspire.themerc  inspireaddeventfilter.cpp  inspireaddeventfilter.h  inspireblurhelper.cpp  inspireblurhelper.h  inspiredebug.h  inspirehelper.cpp  inspirehelper.h  inspiremnemonics.cpp  inspiremnemonics.h  inspiresplitterproxy.cpp  inspiresplitterproxy.h  inspirestyle.cpp  inspirestyle.h  inspirestyleplugin.cpp  inspirestyleplugin.h  inspirewindowmanager.cpp  inspirewindowmanager.h  (+1 more)
style/animations/: ferenanimation.h  ferenanimationdata.h  ferenanimations.cpp  ferenanimations.h  ferenbaseengine.h  ferenbusyindicatordata.h  ferenbusyindicatorengine.cpp  ferenbusyindicatorengine.h  ferendatamap.h  ferendialdata.h  ferendialengine.h  ferenenabledata.h  ferengenericdata.h  ferenheaderviewdata.cpp  ferenheaderviewdata.h  ferenheaderviewengine.h  ferenscrollbardata.cpp  ferenscrollbardata.h  ferenscrollbarengine.cpp  ferenscrollbarengine.h  ferenspinboxdata.cpp  ferenspinboxdata.h  ferenspinboxengine.h  ferenstackedwidgetdata.cpp  ferenstackedwidgetdata.h  ferenstackedwidgetengine.h  ferentabbardata.h  ferentabbarengine.h  ferentoolboxengine.h  ferentransitiondata.cpp  ferentransitiondata.h  ferentransitionwidget.cpp  ferentransitionwidget.h  ferenwidgetstatedata.h  ferenwidgetstateengine.h  inspireanimation.cpp  inspireanimation.h  inspireanimationdata.cpp  inspireanimationdata.h  inspireanimations.cpp  (+46 more)
style/debug/: ferenwidgetexplorer.cpp  ferenwidgetexplorer.h
